# narwhals-daft

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  daft_experiments.py  daft_string_experiments.py  pyproject.toml  pytest_constructor_override.py  run.py  run_tests.py  run_tests.sh  run_typing.sh  update_run_tests.py
.github/workflows/: ci.yml  publish_to_pypi.yml  typing.yml
narwhals_daft/: __init__.py  dataframe.py  expr.py  expr_dt  expr_dt.py  expr_list.py  expr_name.py  expr_str.py  expr_struct.py  group_by.py  namespace.py  selectors.py  utils.py
tests/: conftest.py
utils/: check_dist_content.py  submodule_update.sh
