[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narwhals_daft"
version = "0.1.0"

[project.entry-points.'narwhals.plugins']
narwhals-daft = 'narwhals_daft'

[tool.pyright]
pythonPlatform = "All"
reportMissingTypeArgument = "error"
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "none"
reportUnusedExpression = "none"
typeCheckingMode = "basic"
include = ["narwhals_daft", "tests"]
ignore = [
  "../.venv/",
  "../../../**/Lib",      # stdlib
  "../../../**/typeshed*" # typeshed-fallback
]

dev = [
    "pre-commit",
    "ruff>=0.12.8",
    "pyright>=1.1.403",
    {include-group = "typing"},
]

