[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narwhals_daft"
version = "0.1.0"

[project.entry-points.'narwhals.plugins']
narwhals-daft = 'narwhals_daft'

[dependency-groups]
core = ["daft>=0.5.18"]
dev = [
    "pre-commit",
    "ruff>=0.12.8",
    "pyright>=1.1.403",
    {include-group = "typing"},
]

typing = [
  "duckdb==1.3.0",
  "hypothesis",
  "pytest",
  "pandas-stubs==2.3.0.250703",
  "typing_extensions",
  "mypy~=1.15.0",
  "pyright",
  "pyarrow-stubs==19.2",
  "sqlframe",
  "polars==1.32.2",
  "uv",
  "narwhals[ibis]",
]

[tool.pyright]
pythonPlatform = "All"
reportMissingTypeArgument = "error"
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "none"
reportUnusedExpression = "none"
typeCheckingMode = "basic"
include = ["narwhals_daft", "tests"]
ignore = [
  "../.venv/",
  "../../../**/Lib",      # stdlib
  "../../../**/typeshed*" # typeshed-fallback
]
