[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narwhals_daft"
version = "0.1.0"
dependencies = ["daft>=0.5.18"]

[project.entry-points.'narwhals.plugins']
narwhals-daft = 'narwhals_daft'

[dependency-groups]
tests = [
  "covdefaults",
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-randomly",
  "pytest-xdist",
  "hypothesis",
]

dev = [
    "pre-commit",
    "ruff>=0.12.8",
    "pyright>=1.1.403",
    {include-group = "typing"},
]

typing = [
  "pyright",
]

[tool.pyright]
pythonPlatform = "All"
reportMissingTypeArgument = "error"
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "none"
reportUnusedExpression = "none"
typeCheckingMode = "basic"
include = ["narwhals_daft", "tests"]
ignore = [
  "../.venv/",
  "../../../**/Lib",      # stdlib
  "../../../**/typeshed*" # typeshed-fallback
]

[tool.pytest.ini_options]
env = [
  'PYTHONPATH=narwhals'
]
